--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,6 +42,7 @@
   width: 240px;
   padding: 10px 0px;
   margin-left: 20px;
+  /* z-index: -1; */
 }
 
 .card-image {
@@ -58,7 +59,7 @@
 
 .modal-dialog {
   position: absolute;
-  top: 5%;
+  top: 0%;
   left: 5%;
   bottom: 5%;
   right: 5%;
@@ -83,10 +84,20 @@
 
 .powers-modal {
   position: absolute;
-  top: 5%;
-  right: 105%;
+  top: 2%;
+  right: 95%;
   height: 200px;
   width: 400px;
   border: 2px solid black;
-  background-color: red;
+  background-color: white;
+}
+
+.powers-modal > button {
+  position: absolute;
+  left: 90%;
+  bottom: 80%;
+  background-color: white;
+  border: none !important;
+  font-size: 24px;
+  font-weight: bold;
 }
