--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,11 @@
   transition: all ease-in-out;
 } */
 
+nav {
+  background-color: red;
+  height: 4rem;
+}
+
 .overlay {
   position: fixed; /* Sit on top of the page content */
   /* Hidden by default */
@@ -23,15 +28,16 @@
 .page-container {
   /* display: flex;
   justify-content: space-around; */
-  margin-top: 40px;
+  margin-top: 1rem;
   position: relative;
 }
 
 .heroes-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-row-gap: 15px;
   grid-column-gap: 10px !important;
+  margin-left: 20px;
 }
 
 .card {
@@ -39,35 +45,44 @@
   justify-content: center;
   align-items: center;
   background-color: blue;
-  width: 240px;
+  width: 180px;
   padding: 10px 0px;
   margin-left: 20px;
   /* z-index: -1; */
 }
 
 .card-image {
-  width: 200px;
-  height: 300px;
+  width: 150px;
+  height: 200px;
 }
 
 #hero-name {
   color: white;
   background-color: red;
-  width: 175px;
+  width: 150px;
   margin-top: 9px;
 }
 
 .modal-dialog {
   position: absolute;
-  top: 0%;
+  top: 8%;
   left: 5%;
   bottom: 5%;
   right: 5%;
+  /* box-shadow: 5px 3px 10px black; */
 }
 
 .modal-header {
   display: flex;
   justify-content: center;
+  /* box-shadow: 2px 1px 1px black; */
+  border-bottom: 2px solid black;
+}
+
+.modal-body {
+  /* box-shadow: 5px 3px 10px black; */
+  /* border-left: 2px solid black;
+  border-right: 2px solid black; */
 }
 
 .hidden {
@@ -82,22 +97,213 @@
   position: absolute;
 } */
 
+.modal-footer {
+  display: flex;
+  justify-content: space-evenly;
+  box-shadow: 3px 2px 10px black;
+  border-top: 2px inset black;
+}
+
+.hide-modal {
+  /* background-color: red; */
+}
+
+.powers-button {
+  background-color: red;
+}
+
+.appearance-button {
+  background-color: red;
+}
+
+.bio-button {
+  background-color: red;
+}
+.affiliations-button {
+  background-color: red;
+}
+
 .powers-modal {
   position: absolute;
-  top: 2%;
-  right: 95%;
+  top: -3%;
+  right: 105%;
   height: 200px;
   width: 400px;
   border: 2px solid black;
   background-color: white;
+  z-index: 200;
+  box-shadow: 5px 3px 10px black;
 }
 
 .powers-modal > button {
   position: absolute;
-  left: 90%;
-  bottom: 80%;
+  left: 92%;
+  bottom: 86%;
   background-color: white;
   border: none !important;
   font-size: 24px;
-  font-weight: bold;
+  /* font-weight: bold; */
+  line-height: 24px;
+  height: 24px;
+}
+
+.powers-modal > ul {
+  margin-top: 5px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-row-gap: 20px;
+}
+
+.powers-modal > ul > li {
+  font-size: 20px;
+  color: red;
+  /* font-weight: bold; */
+  text-shadow: 2px 1px 5px blue;
+}
+
+.powers-modal > h2 {
+  text-align: center;
+  margin-top: 5px;
+  text-shadow: 2px 1px 7px black;
+  color: rgb(81, 0, 128);
+}
+
+.appearance-modal {
+  position: absolute;
+  top: 5%;
+  left: 105%;
+  height: 230px;
+  width: 450px;
+  border: 2px solid black;
+  background-color: white;
+  z-index: 200;
+  box-shadow: 5px 3px 10px black;
+}
+.appearance-modal > button {
+  position: absolute;
+  left: 92%;
+  bottom: 86%;
+  background-color: white;
+  border: none !important;
+  font-size: 24px;
+  /* font-weight: bold; */
+  line-height: 24px;
+  height: 24px;
+}
+
+.appearance-modal > ul {
+  margin-top: 5px;
+  margin-left: -10px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-row-gap: 20px;
+}
+
+.appearance-modal > ul > li {
+  font-size: 20px;
+  color: red;
+  /* font-weight: bold; */
+  text-shadow: 2px 1px 5px blue;
+}
+
+.appearance-modal > h2 {
+  text-align: center;
+  margin-top: 8px;
+  text-shadow: 2px 1px 7px black;
+  color: rgb(81, 0, 128);
+}
+
+.bio-modal {
+  position: absolute;
+  top: 36%;
+  right: 105%;
+  height: 400px;
+  width: 450px;
+  border: 2px solid black;
+  background-color: white;
+  z-index: 200;
+  box-shadow: 5px 3px 10px black;
+}
+
+.bio-modal > button {
+  position: absolute;
+  left: 92%;
+  bottom: 86%;
+  background-color: white;
+  border: none !important;
+  font-size: 24px;
+  /* font-weight: bold; */
+  line-height: 24px;
+  height: 24px;
+}
+
+.bio-modal > ul {
+  margin-top: 5px;
+  margin-left: -10px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-row-gap: 20px;
+}
+
+.bio-modal > ul > li {
+  font-size: 20px;
+  color: red;
+  /* font-weight: bold; */
+  text-shadow: 2px 1px 5px blue;
+}
+
+.bio-modal > h2 {
+  text-align: center;
+  margin-top: 5px;
+  text-shadow: 2px 1px 7px black;
+  color: rgb(81, 0, 128);
+}
+
+.affiliations-modal {
+  position: absolute;
+  top: 51%;
+  left: 105%;
+  height: 230px;
+  width: 450px;
+  border: 2px solid black;
+  background-color: white;
+  z-index: 200;
+  box-shadow: 5px 3px 10px black;
+}
+.affiliations-modal > button {
+  position: absolute;
+  left: 92%;
+  bottom: 86%;
+  background-color: white;
+  border: none !important;
+  font-size: 24px;
+  /* font-weight: bold; */
+  line-height: 24px;
+  height: 24px;
+}
+
+.affiliations-modal > ul {
+  margin-top: 5px;
+  margin-left: -10px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-row-gap: 20px;
+}
+
+.affiliations-modal > ul > li {
+  font-size: 20px;
+  color: red;
+  /* font-weight: bold; */
+  text-shadow: 2px 1px 5px blue;
+}
+
+.affiliations-modal > h2 {
+  text-align: center;
+  margin-top: 20px;
+  text-shadow: 2px 1px 7px black;
+  color: rgb(81, 0, 128);
 }
