--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 
 * {
   box-sizing: border-box;
@@ -8,20 +8,24 @@ body {
   /* background-color:rgba(0, 0, 0, 0.3) !important;  */
   /* background: linear-gradient(90deg, rgba(43,47,66,1) 18%, rgba(17,7,11,1) 52%, rgba(3,33,57,1) 76%); */
   /* background: linear-gradient(90deg, rgba(13,15,25,1) 18%, rgba(98,93,95,1) 52%, rgba(11,20,28,1) 76%); */
-  background: linear-gradient(90deg, rgba(13,15,25,1) 18%, rgba(7,2,4,1) 52%, rgba(11,20,28,1) 76%);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 15, 25, 1) 18%,
+    rgba(7, 2, 4, 1) 52%,
+    rgba(11, 20, 28, 1) 76%
+  );
 }
-
 
 .nav-container {
   position: sticky;
   top: 0;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
-  background-color: white;
+  background: white;
   height: 4rem;
   z-index: 100;
-  transition: all ease-in; 
+  transition: background 3s ease-in;
 }
 
 .nav-container h3 {
@@ -32,10 +36,9 @@ body {
 .nav-heroes {
   position: absolute;
   top: 0.2rem;
-  left: .5rem;
-  transition: all 3s cubic-bezier(0.55, 0.055, 0.675, 0.19); 
+  left: 0.5rem;
+  transition: all 3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
-
 
 .nav-villains {
   position: absolute;
