--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700;600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -110,6 +112,7 @@ body {
   /* background: radial-gradient(circle, rgba(25,37,91,1) 18%, rgba(121,9,55,1) 52%, rgba(28,122,201,1) 76%); */
   padding-left: 5px;
   /* background-color:rgba(0, 0, 0, 0.3); */
+  transition: all 0.3s ease-in-out;
 }
 
 .card {
@@ -120,27 +123,46 @@ body {
   width: 180px;
   padding: 10px 0px;
   margin-left: 20px;
-  box-shadow: 2px 1px black;
+  border: 2px solid white;
+  box-shadow: 2px 1px white;
   /* z-index: -1; */
 }
 
 .card-image {
   width: 150px;
   height: 200px;
+  border: 1px solid white !important;
+  box-shadow: 1px 1px black;
 }
 
 #hero-name {
+  font-family: Cinzel;
+  font-weight: 600;
+  font-size: 18px;
   color: white;
+  text-shadow: 3px 2px 7px black;
   background-color: red;
   width: 150px;
   margin-top: 9px;
   padding-bottom: 4px;
+  border: 1px solid white;
+  box-shadow: 1px 1px white;
   border-radius: 2px;
+  /* text-transform: uppercase; */
+  transition: all 0.3s ease-in-out;
+}
+
+#hero-name:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
+  box-shadow: 1px 1px red;
+  /* text-shadow: none; */
 }
 
 .modal-dialog {
-  position: absolute;
-  top: 8%;
+  position: fixed;
+  top: 10%;
   left: 5%;
   bottom: 5%;
   right: 5%;
@@ -148,10 +170,17 @@ body {
 }
 
 .modal-header {
+  height: 65px;
   display: flex;
   justify-content: center;
+  align-items: center;
   /* box-shadow: 2px 1px 1px black; */
   border-bottom: 2px solid black;
+}
+
+.modal-title {
+  font-family: Bangers;
+  font-size: 50px;
 }
 
 .modal-body {
@@ -167,6 +196,8 @@ body {
 
 .modal-image {
   width: 300px;
+  border: 2px solid black;
+  box-shadow: 2px 2px 2px black;
 }
 
 /* .close {
@@ -180,47 +211,91 @@ body {
   border-top: 2px inset black;
 }
 
+.close-modal {
+  font-family: Inknut Antiqua;
+  background-color: black;
+}
+
+.close-modal:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
 .hide-modal {
   /* background-color: red; */
 }
 
 .powers-button {
   background-color: red;
+  font-family: Inknut Antiqua;
+}
+
+.powers-button:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
 }
 
 .appearance-button {
   background-color: red;
+  font-family: Inknut Antiqua;
+}
+
+.appearance-button:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
 }
 
 .bio-button {
   background-color: red;
+  font-family: Inknut Antiqua;
 }
+
+.bio-button:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
+}
+
 .affiliations-button {
   background-color: red;
+  font-family: Inknut Antiqua;
+}
+
+.affiliations-button:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
 }
 
 .powers-modal {
   position: absolute;
   top: -3%;
   right: 105%;
-  height: 200px;
-  width: 400px;
+  height: 230px;
+  width: 430px;
   border: 2px solid black;
-  background-color: white;
+  background-color: #ececec;
   z-index: 200;
   box-shadow: 5px 3px 10px black;
 }
 
 .powers-modal > button {
   position: absolute;
-  left: 92%;
+  left: 91%;
   bottom: 86%;
-  background-color: white;
+  background-color: #ececec;
   border: none !important;
   font-size: 24px;
   /* font-weight: bold; */
   line-height: 24px;
   height: 24px;
+}
+
+.powers-modal > button:hover {
+  cursor: pointer;
 }
 
 .powers-modal > ul {
@@ -229,43 +304,57 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 200px);
   grid-row-gap: 20px;
+  margin-right: 20px;
 }
 
 .powers-modal > ul > li {
+  font-family: Inknut Antiqua;
   font-size: 20px;
-  color: red;
-  /* font-weight: bold; */
-  text-shadow: 2px 1px 5px blue;
+  color: black;
+  font-weight: bold;
+  padding-right: none !important;
+  text-transform: capitalize;
+  /* text-shadow: 2px 1px 5px red; */
 }
 
 .powers-modal > h2 {
+  font-family: Inknut Antiqua;
+  font-size: 28px;
   text-align: center;
-  margin-top: 5px;
+  margin: 12px 0px 15px;
+
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
 
 .appearance-modal {
   position: absolute;
-  top: 5%;
+  top: -2%;
   left: 105%;
-  height: 230px;
-  width: 450px;
+  height: 260px;
+  width: 430px;
   border: 2px solid black;
-  background-color: white;
-  z-index: 200;
+  background-color: #ececec;
+  z-index: 2000;
   box-shadow: 5px 3px 10px black;
 }
 .appearance-modal > button {
   position: absolute;
   left: 92%;
-  bottom: 86%;
-  background-color: white;
+  bottom: 90%;
+  background-color: #ececec;
   border: none !important;
   font-size: 24px;
   /* font-weight: bold; */
   line-height: 24px;
   height: 24px;
+}
+
+/* .modal-dialog button:hover {
+  cursor: pointer;
+} */
+.appearance-modal > button:hover {
+  cursor: pointer;
 }
 
 .appearance-modal > ul {
@@ -278,27 +367,31 @@ body {
 }
 
 .appearance-modal > ul > li {
+  font-family: Inknut Antiqua;
   font-size: 20px;
-  color: red;
-  /* font-weight: bold; */
-  text-shadow: 2px 1px 5px blue;
+  color: black;
+  font-weight: bold;
+  /* text-shadow: 2px 1px 5px red; */
+  text-transform: capitalize;
 }
 
 .appearance-modal > h2 {
+  font-family: Inknut Antiqua;
+  font-size: 28px;
   text-align: center;
-  margin-top: 8px;
+  margin-top: 12px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
 
 .bio-modal {
   position: absolute;
-  top: 36%;
+  top: 30%;
   right: 105%;
-  height: 400px;
+  height: 550px;
   width: 450px;
   border: 2px solid black;
-  background-color: white;
+  background-color: #ececec;
   z-index: 200;
   box-shadow: 5px 3px 10px black;
 }
@@ -306,13 +399,16 @@ body {
 .bio-modal > button {
   position: absolute;
   left: 92%;
-  bottom: 92%;
-  background-color: white;
+  bottom: 94%;
+  background-color: #ececec;
   border: none !important;
   font-size: 24px;
   /* font-weight: bold; */
   line-height: 24px;
   height: 24px;
+}
+.bio-modal > button:hover {
+  cursor: pointer;
 }
 
 .bio-modal > ul {
@@ -325,40 +421,48 @@ body {
 }
 
 .bio-modal > ul > li {
+  font-family: Inknut Antiqua;
   font-size: 20px;
-  color: red;
-  /* font-weight: bold; */
-  text-shadow: 2px 1px 5px blue;
+  color: black;
+  font-weight: bold;
+  /* text-shadow: 2px 1px 5px red; */
+  text-transform: capitalize;
 }
 
 .bio-modal > h2 {
+  font-family: Inknut Antiqua;
+  font-size: 28px;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 12px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
 
 .affiliations-modal {
   position: absolute;
-  top: 51%;
+  top: 35%;
   left: 105%;
-  height: 230px;
+  height: 480px;
   width: 450px;
   border: 2px solid black;
-  background-color: white;
+  background-color: #ececec;
   z-index: 200;
   box-shadow: 5px 3px 10px black;
 }
 .affiliations-modal > button {
   position: absolute;
   left: 92%;
-  bottom: 86%;
-  background-color: white;
+  bottom: 92%;
+  background-color: #ececec;
   border: none !important;
   font-size: 24px;
   /* font-weight: bold; */
   line-height: 24px;
   height: 24px;
+}
+
+.affiliations-modal > button:hover {
+  cursor: pointer;
 }
 
 .affiliations-modal > ul {
@@ -371,15 +475,19 @@ body {
 }
 
 .affiliations-modal > ul > li {
+  font-family: Inknut Antiqua;
   font-size: 20px;
-  color: red;
-  /* font-weight: bold; */
-  text-shadow: 2px 1px 5px blue;
+  color: black;
+  font-weight: bold;
+  /* text-shadow: 3px 2px 3px black; */
+  text-transform: capitalize;
 }
 
 .affiliations-modal > h2 {
+  font-family: Inknut Antiqua;
+  font-size: 28px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 12px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
