--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -125,7 +125,24 @@ body {
   margin-left: 20px;
   border: 2px solid white;
   box-shadow: 2px 1px white;
+  transition: all 0.3s ease-in-out;
   /* z-index: -1; */
+}
+
+.card:hover .card-image {
+  animation-name: shake;
+  animation-duration: 0.1s;
+  animation-iteration-count: 8;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(1deg);
+  }
+
+  100% {
+    transform: rotate(-1deg);
+  }
 }
 
 .card-image {
@@ -133,6 +150,7 @@ body {
   height: 200px;
   border: 1px solid white !important;
   box-shadow: 1px 1px black;
+  transition: all 0.3s ease-in-out;
 }
 
 #hero-name {
@@ -159,6 +177,10 @@ body {
   box-shadow: 1px 1px red;
   /* text-shadow: none; */
 }
+
+/* .card:hover .card-image {
+  transform: scaleX(1.05) scaleY(1.05);
+} */
 
 .modal-dialog {
   position: fixed;
@@ -198,6 +220,28 @@ body {
   width: 300px;
   border: 2px solid black;
   box-shadow: 2px 2px 2px black;
+  transition: all 1s ease-in-out;
+}
+
+.modal-image:hover {
+  /* transform: rotate(360deg); */
+  /* transform: scaleX(2) scaleY(2);
+  transform: translateY(50%); */
+  animation: move 4s;
+}
+
+@keyframes move {
+  0% {
+    transform: translateY(50%);
+  }
+
+  50% {
+    transform: scaleX(1.3) scaleY(1.3);
+  }
+
+  75% {
+    transform: scaleX(1.65) scaleY(1.65);
+  }
 }
 
 /* .close {
