--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700;600&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700;600&display=swap"); */
 
 * {
   box-sizing: border-box;
@@ -37,15 +37,15 @@ body {
 
 .nav-heroes {
   position: absolute;
-  top: 0.2rem;
-  left: 0.5rem;
+  top: 3.2px;
+  left: 8px;
   transition: all 3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
 .nav-villains {
   position: absolute;
-  top: 0.2rem;
-  left: 111rem;
+  top: 3.2px;
+  /* left: 1776px; */
   /* med-large desktop screen start position
   left: 87rem; */
   /* laptop size screen start position */
@@ -107,7 +107,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-row-gap: 30px;
   grid-column-gap: 10px !important;
-  margin-left: 10px !important;
+  margin-left: -6px !important;
   margin-top: 20px;
   /* background: radial-gradient(circle, rgba(25,37,91,1) 18%, rgba(121,9,55,1) 52%, rgba(28,122,201,1) 76%); */
   padding-left: 5px;
@@ -318,8 +318,8 @@ body {
   position: absolute;
   top: -3%;
   right: 105%;
-  height: 220px;
-  width: 430px;
+  /* height: 220px;
+  width: 430px; */
   border: 2px solid black;
   background-color: #ececec;
   z-index: 200;
@@ -327,9 +327,10 @@ body {
 }
 
 .powers-modal > button {
+  display: none;
   position: absolute;
-  left: 91%;
-  bottom: 86%;
+  left: 93%;
+  bottom: 87%;
   background-color: #ececec;
   border: none !important;
   font-size: 24px;
@@ -375,14 +376,15 @@ body {
   position: absolute;
   top: -2%;
   left: 105%;
-  height: 285px;
-  width: 430px;
+  /* height: 285px;
+  width: 430px; */
   border: 2px solid black;
   background-color: #ececec;
   z-index: 2000;
   box-shadow: 5px 3px 10px black;
 }
 .appearance-modal > button {
+  display: none;
   position: absolute;
   left: 92%;
   bottom: 90%;
@@ -408,6 +410,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 200px);
   grid-row-gap: 20px;
+  padding-right: 25px;
 }
 
 .appearance-modal > ul > li {
@@ -432,8 +435,8 @@ body {
   position: absolute;
   top: 30%;
   right: 105%;
-  height: 550px;
-  width: 450px;
+  /* height: 550px;
+  width: 450px; */
   border: 2px solid black;
   background-color: #ececec;
   z-index: 200;
@@ -441,6 +444,7 @@ body {
 }
 
 .bio-modal > button {
+  display: none;
   position: absolute;
   left: 92%;
   bottom: 94%;
@@ -462,6 +466,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 200px);
   grid-row-gap: 20px;
+  padding-right: 20px;
 }
 
 .bio-modal > ul > li {
@@ -486,17 +491,18 @@ body {
   position: absolute;
   top: 35%;
   left: 105%;
-  height: 480px;
-  width: 450px;
+  /* height: 480px;
+  width: 450px; */
   border: 2px solid black;
   background-color: #ececec;
   z-index: 200;
   box-shadow: 5px 3px 10px black;
 }
 .affiliations-modal > button {
+  display: none;
   position: absolute;
   left: 92%;
-  bottom: 92%;
+  bottom: 90%;
   background-color: #ececec;
   border: none !important;
   font-size: 24px;
