--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -82,17 +82,15 @@ body {
 }
 
 .overlay {
-  position: fixed; /* Sit on top of the page content */
-  /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
+  position: fixed;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.3); /* Black background with opacity */
-  z-index: 100; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 100;
 }
 
 .page-container {
@@ -374,7 +372,7 @@ body {
 
 .appearance-modal {
   position: absolute;
-  top: -2%;
+  top: 12%;
   left: 105%;
   /* height: 285px;
   width: 430px; */
@@ -387,7 +385,7 @@ body {
   display: none;
   position: absolute;
   left: 92%;
-  bottom: 90%;
+  bottom: 97%;
   background-color: #ececec;
   border: none !important;
   font-size: 24px;
@@ -489,7 +487,7 @@ body {
 
 .affiliations-modal {
   position: absolute;
-  top: 35%;
+  top: 55%;
   left: 105%;
   /* height: 480px;
   width: 450px; */
