--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,7 +101,7 @@ body {
 }
 
 .heroes-list {
-  display: grid;
+  display: none;
   grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-row-gap: 30px;
   grid-column-gap: 10px !important;
@@ -110,7 +110,7 @@ body {
   /* background: radial-gradient(circle, rgba(25,37,91,1) 18%, rgba(121,9,55,1) 52%, rgba(28,122,201,1) 76%); */
   padding-left: 5px;
   /* background-color:rgba(0, 0, 0, 0.3); */
-  transition: all 0.3s ease-in-out;
+  transition: all 2s ease-in-out;
 }
 
 .card {
@@ -182,7 +182,7 @@ body {
 
 .modal-dialog {
   position: fixed;
-  top: 10%;
+  top: 5%;
   left: 5%;
   bottom: 5%;
   right: 5%;
@@ -248,10 +248,18 @@ body {
 } */
 
 .modal-footer {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-row-gap: 5px !important;
+  justify-content: space-between;
+  align-items: center;
+
   box-shadow: 3px 2px 10px black;
   border-top: 2px inset black;
+}
+
+.modal-footer > button {
+  width: 150px;
 }
 
 .close-modal {
@@ -302,6 +310,17 @@ body {
   border: 1px solid red;
 }
 
+.work-button {
+  background-color: red;
+  font-family: Inknut Antiqua;
+}
+
+.work-button:hover {
+  background-color: white;
+  color: red;
+  border: 1px solid red;
+}
+
 .affiliations-button {
   background-color: red;
   font-family: Inknut Antiqua;
@@ -315,8 +334,8 @@ body {
 
 .powers-modal {
   position: absolute;
-  top: -3%;
-  right: 105%;
+  top: 80%;
+  right: 3%;
   /* height: 220px;
   width: 430px; */
   border: 2px solid black;
@@ -373,7 +392,7 @@ body {
 
 .appearance-modal {
   position: absolute;
-  top: 12%;
+  top: 10%;
   left: 105%;
   /* height: 285px;
   width: 430px; */
@@ -432,10 +451,10 @@ body {
 
 .bio-modal {
   position: absolute;
-  top: 30%;
+  top: 2%;
   right: 105%;
-  /* height: 550px;
-  width: 450px; */
+  /* /* height: 550px; */
+  /* width: 350px; */
   border: 2px solid black;
   background-color: #ececec;
   z-index: 200;
@@ -446,7 +465,7 @@ body {
   display: none;
   position: absolute;
   left: 92%;
-  bottom: 94%;
+  top: 94%;
   background-color: #ececec;
   border: none !important;
   font-size: 24px;
@@ -463,9 +482,10 @@ body {
   margin-left: -10px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(2, 200px);
+  grid-template-columns: repeat(1, 200px);
   grid-row-gap: 20px;
   padding-right: 20px;
+  word-wrap: break-word;
 }
 
 .bio-modal > ul > li {
@@ -486,10 +506,65 @@ body {
   color: rgb(81, 0, 128);
 }
 
+.work-modal {
+  position: absolute;
+  top: 43%;
+  left: 105%;
+  /* height: 480px;
+  width: 450px; */
+  border: 2px solid black;
+  background-color: #ececec;
+  z-index: 200;
+  box-shadow: 5px 3px 10px black;
+}
+.work-modal > button {
+  display: none;
+  position: absolute;
+  left: 92%;
+  bottom: 90%;
+  background-color: #ececec;
+  border: none !important;
+  font-size: 24px;
+  /* font-weight: bold; */
+  line-height: 24px;
+  height: 24px;
+}
+
+.work-modal > button:hover {
+  cursor: pointer;
+}
+
+.work-modal > ul {
+  margin-top: 5px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-row-gap: 20px;
+  margin-right: 20px !important;
+}
+
+.work-modal > ul > li {
+  font-family: Inknut Antiqua;
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  /* text-shadow: 3px 2px 3px black; */
+  text-transform: capitalize;
+}
+
+.work-modal > h2 {
+  font-family: Inknut Antiqua;
+  font-size: 28px;
+  text-align: center;
+  margin-top: 12px;
+  text-shadow: 2px 1px 7px black;
+  color: rgb(81, 0, 128);
+}
+
 .affiliations-modal {
   position: absolute;
-  top: 55%;
-  left: 105%;
+  top: 15%;
+  left: -120%;
   /* height: 480px;
   width: 450px; */
   border: 2px solid black;
@@ -519,8 +594,9 @@ body {
   margin-left: -10px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(2, 200px);
+  grid-template-columns: repeat(1, 250px);
   grid-row-gap: 20px;
+  margin-right: 20px !important;
 }
 
 .affiliations-modal > ul > li {
