--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -182,7 +182,7 @@ body {
 
 .modal-dialog {
   position: fixed;
-  top: 5%;
+  top: 6%;
   left: 5%;
   bottom: 5%;
   right: 5%;
@@ -231,15 +231,17 @@ body {
 
 @keyframes move {
   0% {
-    transform: translateY(50%);
+    transform: translateY(55%);
   }
 
   50% {
     transform: scaleX(1.3) scaleY(1.3);
   }
-
+  70% {
+    transform: translateY(0%);
+  }
   75% {
-    transform: scaleX(1.65) scaleY(1.65);
+    transform: scaleX(1.5) scaleY(1.5);
   }
 }
 
