--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,21 +36,35 @@ body {
 }
 
 .nav-heroes {
+  visibility: hidden;
   position: absolute;
   top: 3.2px;
   left: 8px;
-  transition: all 3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transform: scaleX(0.8) scaleY(0.8);
+  transition: left 2s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
 .nav-villains {
+  visibility: hidden;
   position: absolute;
   top: 3.2px;
-  /* left: 1776px; */
-  /* med-large desktop screen start position
-  left: 87rem; */
-  /* laptop size screen start position */
-  /* left: 71rem; */
-  transition: all 3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transform: scaleX(0.8) scaleY(0.8);
+
+  transition: left 2s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+@keyframes grow {
+  0% {
+    transform: scaleX(0.8) scaleY(0.8);
+  }
+
+  50% {
+    transform: scaleX(1.2) scaleY(1.2);
+  }
+
+  100% {
+    transform: scaleX(1.1) scaleY(1.1);
+  }
 }
 
 .nav-search {
