--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,10 +69,20 @@ body {
 
 .nav-search {
   display: none;
+  /* transform: translateY(-50px); */
   text-align: center;
   margin: auto;
   transition: all 4s ease-in;
-  animation: appear 3s;
+  animation: dropIn 3s;
+}
+
+@keyframes dropIn {
+  0% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 @keyframes appear {
@@ -87,12 +97,16 @@ body {
 .heroes-search > input {
   display: flex;
   justify-content: center;
-  border: 1px solid black;
-  box-shadow: 2px 1px 3px black;
+  border: 1px solid white;
+  /* box-shadow: 2px 1px 3px white; */
   width: 13rem !important;
   text-align: center;
   padding-left: 23px !important;
-  /* background-color: black; */
+  color: white;
+  font-weight: bolder;
+  font-size: 20px;
+  font-family: Cinzel;
+  background-color: black;
 }
 
 .overlay {
@@ -119,12 +133,26 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-row-gap: 30px;
   grid-column-gap: 10px !important;
-  margin-left: -6px !important;
+  margin-left: 8px !important;
   margin-top: 20px;
   /* background: radial-gradient(circle, rgba(25,37,91,1) 18%, rgba(121,9,55,1) 52%, rgba(28,122,201,1) 76%); */
   padding-left: 5px;
   /* background-color:rgba(0, 0, 0, 0.3); */
-  transition: all 2s ease-in-out;
+  transition: all 1.5s ease-in;
+}
+
+.fade-in {
+  animation: fade-in 0.3s ease-in;
+}
+
+@keyframes fade-in {
+  0% {
+    display: none;
+  }
+
+  100% {
+    display: grid;
+  }
 }
 
 .card {
@@ -139,6 +167,18 @@ body {
   box-shadow: 2px 1px white;
   transition: all 0.3s ease-in-out;
   /* z-index: -1; */
+  transform: scaleX(0) scaleY(0);
+  animation: cardGrow 1.5s ease-in;
+}
+
+@keyframes cardGrow {
+  0% {
+    transform: scaleX(0) scaleY(0);
+  }
+
+  100% {
+    transform: scaleX(1) scaleY(1);
+  }
 }
 
 .card:hover .card-image {
