--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -106,7 +106,13 @@ body {
   font-weight: bolder;
   font-size: 20px;
   font-family: Cinzel;
-  background-color: black;
+  background: linear-gradient(
+    90deg,
+    rgba(13, 15, 25, 1) 18%,
+    rgba(7, 2, 4, 1) 52%,
+    rgba(11, 20, 28, 1) 76%
+  );
+  /* background-color: black; */
 }
 
 .overlay {
@@ -237,7 +243,7 @@ body {
 .modal-dialog {
   position: fixed;
   top: 6%;
-  left: 5%;
+  left: 4%;
   bottom: 5%;
   right: 5%;
   /* box-shadow: 3px 3px 3px 10px red; */
@@ -249,7 +255,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* box-shadow: 2px 1px 1px black; */
+  box-shadow: 2px 1px 5px black;
   border-bottom: 2px solid black;
 }
 
@@ -274,6 +280,7 @@ body {
   border: 2px solid black;
   box-shadow: 2px 2px 2px black;
   transition: all 1s ease-in-out;
+  z-index: 3000;
 }
 
 .modal-image:hover {
@@ -390,8 +397,8 @@ body {
 
 .powers-modal {
   position: absolute;
-  top: 80%;
-  right: 3%;
+  top: -2%;
+  left: 105%;
   /* height: 220px;
   width: 430px; */
   border: 2px solid black;
@@ -418,12 +425,12 @@ body {
 }
 
 .powers-modal > ul {
-  margin-top: 5px;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(2, 200px);
   grid-row-gap: 20px;
-  margin-right: 20px;
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .powers-modal > ul > li {
@@ -434,6 +441,11 @@ body {
   padding-right: none !important;
   text-transform: capitalize;
   /* text-shadow: 2px 1px 5px red; */
+  margin-left: -8px;
+}
+
+.powers-key {
+  color: red;
 }
 
 .powers-modal > h2 {
@@ -448,7 +460,7 @@ body {
 
 .appearance-modal {
   position: absolute;
-  top: 10%;
+  top: 25%;
   left: 105%;
   /* height: 285px;
   width: 430px; */
@@ -482,9 +494,9 @@ body {
   margin-left: -10px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(2, 200px);
+  grid-template-columns: repeat(2, 270px);
   grid-row-gap: 20px;
-  padding-right: 25px;
+  padding-right: 20px;
 }
 
 .appearance-modal > ul > li {
@@ -494,20 +506,25 @@ body {
   font-weight: bold;
   /* text-shadow: 2px 1px 5px red; */
   text-transform: capitalize;
+  margin-right: 12px !important;
+}
+
+.appearance-key {
+  color: red;
 }
 
 .appearance-modal > h2 {
   font-family: Inknut Antiqua;
   font-size: 28px;
   text-align: center;
-  margin-top: 12px;
+  margin: 12px 0px 15px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
 
 .bio-modal {
   position: absolute;
-  top: 2%;
+  top: -2%;
   right: 105%;
   /* /* height: 550px; */
   /* width: 350px; */
@@ -538,7 +555,7 @@ body {
   margin-left: -10px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(1, 200px);
+  grid-template-columns: repeat(1, 230px);
   grid-row-gap: 20px;
   padding-right: 20px;
   word-wrap: break-word;
@@ -553,18 +570,22 @@ body {
   text-transform: capitalize;
 }
 
+.bio-key {
+  color: red;
+}
+
 .bio-modal > h2 {
   font-family: Inknut Antiqua;
   font-size: 28px;
   text-align: center;
-  margin-top: 12px;
+  margin: 12px 0px 15px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
 
 .work-modal {
   position: absolute;
-  top: 43%;
+  top: 52%;
   left: 105%;
   /* height: 480px;
   width: 450px; */
@@ -594,9 +615,9 @@ body {
   margin-top: 5px;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(2, 200px);
+  grid-template-columns: repeat(2, 240px);
   grid-row-gap: 20px;
-  margin-right: 20px !important;
+  margin-right: 0px !important;
 }
 
 .work-modal > ul > li {
@@ -606,23 +627,28 @@ body {
   font-weight: bold;
   /* text-shadow: 3px 2px 3px black; */
   text-transform: capitalize;
+  margin-right: 20px !important;
+}
+
+.work-key {
+  color: red;
 }
 
 .work-modal > h2 {
   font-family: Inknut Antiqua;
   font-size: 28px;
   text-align: center;
-  margin-top: 12px;
+  margin: 12px 0px 15px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
 }
 
 .affiliations-modal {
   position: absolute;
-  top: 5%;
-  left: -120%;
-  /* height: 480px;
-  width: 450px; */
+  top: -2%;
+  left: -125%;
+  /* height: 480px; */
+  /* width: 450px; */
   border: 2px solid black;
   background-color: #ececec;
   z-index: 200;
@@ -664,6 +690,10 @@ body {
   text-transform: capitalize;
 }
 
+.affiliations-key {
+  color: red;
+}
+
 .affiliations-modal > h2 {
   font-family: Inknut Antiqua;
   font-size: 28px;
@@ -671,4 +701,5 @@ body {
   margin-top: 12px;
   text-shadow: 2px 1px 7px black;
   color: rgb(81, 0, 128);
+  margin: 12px 0px 15px;
 }
