--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -352,6 +352,8 @@ body {
 }
 
 .appearance-button {
+  /* position: relative; */
+  /* z-index: -1; */
   background-color: red;
   font-family: Inknut Antiqua;
 }
@@ -405,6 +407,7 @@ body {
   background-color: #ececec;
   z-index: 200;
   box-shadow: 5px 3px 10px black;
+  overflow-y: hidden;
 }
 
 .powers-modal > button {
